# mypds

./: .gitignore  AGENTS.md  PLUGINS.md  README.md  install.sh  pdscheck.html  pyproject.toml
src/millipds/: app_util.py  service.py  web.py  web_store.py
src/millipds/static/: node.css
src/millipds/templates/: node_base.html  node_dashboard.html  node_files.html  node_home.html  node_info.html  node_init.html  node_links.html  node_links_edit.html  node_login.html  node_pages.html  node_places.html  node_settings.html
src/mypds/: __main__.py  appview_proxy.py  atproto_repo.py  atproto_sync.py  auth_bearer.py  auth_oauth.py  database.py  plugin_runner.py  repo_ops.py  service.py  static_config.py  totp_util.py  web.py  web_store.py
src/mypds/plugins/activity/: __init__.py  __main__.py
src/mypds/plugins/aturi/: __init__.py  __main__.py
src/mypds/plugins/connectedapps/: __init__.py  __main__.py
src/mypds/plugins/cv/: __init__.py  __main__.py
src/mypds/plugins/dropbox/: __init__.py  __main__.py
src/mypds/plugins/federation/: __init__.py  __main__.py  crypto.py  peer.py
src/mypds/plugins/files/: __init__.py  __main__.py
src/mypds/plugins/gallery/: __init__.py  __main__.py
src/mypds/plugins/hello/: __init__.py  __main__.py
src/mypds/static/: pdscheck.html
src/mypds/templates/: authn.html  node_base.html  node_compose.html  node_dashboard.html  node_dropbox.html  node_dropbox_inbox.html  node_home.html  node_info.html  node_login.html  node_page_gate.html  node_page_view.html  node_places_new.html  node_plugin_settings.html  node_settings.html
test_data/: create_identity.sh
(+69 files in other folders)
