[build-system]
requires = [
	"setuptools>=61.0", "setuptools_scm>=8"
]
build-backend = "setuptools.build_meta"

[project]
name = "mypds"
dynamic = ["version"]
authors = [
 	{ name="David Buchanan", email="d@vidbuchanan.co.uk" },
]
description = "ATProto Personal Home Node — self-hosted PDS with gallery, blog, files, compose, password-protected pages and web UI. Fork of millipds."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
]
dependencies = [
	"cbrrr >= 1.0.0, < 2",
	"atmst >= 0.0.6",
	"pyjwt[crypto]",
	"cryptography >= 45.0.0",
	"aiohttp",
	"aiodns", # goes faster, apparently
	"aiohttp-middlewares", # cors
	"docopt",
	"apsw",
	"base58",
	"jinja2",
	"pyotp",
	"segno",
	"PyNaCl"
]

[project.optional-dependencies]
docs = [
	"sphinx",
	"sphinx-rtd-theme",
	"sphinxcontrib-jquery",
]
test = [
	"requests",
	"pytest",
	"pytest-aio",
	"pytest-aiohttp",
	"pytest-depends",
	"pyright",
]
dev = [
	"ruff",
]

[project.urls]
Homepage = "https://github.com/isgudtek/mypds"
Issues = "https://github.com/isgudtek/mypds/issues"

[project.scripts]
mypds = "mypds.__main__:main"

[tool.ruff]
line-length = 80
format.indent-style = "tab"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["templates/*.html", "static/**/*", "*.html", "*.css", "*.js"]

[tool.setuptools_scm]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "session"
